# HVAC_Motor

./: .gitignore  LICENSE  README.md
Design Files/: HVAC_STM32_Motor_Controller.csv  HVAC_STM32_Motor_Controller.kicad_pcb  HVAC_STM32_Motor_Controller.kicad_prl  HVAC_STM32_Motor_Controller.kicad_pro  HVAC_STM32_Motor_Controller.kicad_sch  HVAC_STM32_Motor_Controller.xml
Design Files/assembly/: HVAC_STM32_Footprint_Positions.csv
Design Files/gerber/: HVAC_STM32_Motor_Controller-B_Cu.gbr  HVAC_STM32_Motor_Controller-B_Mask.gbr  HVAC_STM32_Motor_Controller-B_Paste.gbr  HVAC_STM32_Motor_Controller-B_Silkscreen.gbr  HVAC_STM32_Motor_Controller-Edge_Cuts.gbr  HVAC_STM32_Motor_Controller-F_Cu.gbr  HVAC_STM32_Motor_Controller-F_Mask.gbr  HVAC_STM32_Motor_Controller-F_Paste.gbr  HVAC_STM32_Motor_Controller-F_Silkscreen.gbr  HVAC_STM32_Motor_Controller-In1_Cu.gbr  HVAC_STM32_Motor_Controller-In2_Cu.gbr  HVAC_STM32_Motor_Controller.drl
Design Files/jlcpcb/: project.db
Design Files/jlcpcb/assembly/: BOM-HVAC_STM32_Motor_Controller.csv  POS-HVAC_STM32_Motor_Controller.csv
Design Files/jlcpcb/gerber/: HVAC_STM32_Motor_Controller-CuBottom.gbr  HVAC_STM32_Motor_Controller-CuIn1.gbr  HVAC_STM32_Motor_Controller-CuIn2.gbr  HVAC_STM32_Motor_Controller-CuTop.gbr  HVAC_STM32_Motor_Controller-EdgeCuts.gbr  (+9 more)
hvac_motor/: Kconfig
hvac_motor/apps/hw_test/: CMakeLists.txt  README.rst  hw_test.yaml  prj.conf
hvac_motor/apps/hw_test/boards/: hvac_motor_stm32f3.overlay
hvac_motor/apps/hw_test/src/: main.c
hvac_motor/modules/: CMakeLists.txt  Kconfig  Kconfig.hvac_motor  Readme.rst
(+9 files in other folders)
